--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,8 +10,9 @@
 
       <EditText
         android:id="@+id/search_text"
-        android:layout_width="wrap_content"
+        android:layout_width="0dip"
         android:layout_height="wrap_content"
+        android:layout_weight="2"
         android:ems="10"
         android:hint="@string/search_hint"
         android:paddingTop="10sp" >
@@ -20,8 +21,9 @@
 
       <Button
           android:id="@+id/search_button"
-          android:layout_width="100dp"
+          android:layout_width="0dip"
           android:layout_height="wrap_content"
+          android:layout_weight="1"
           android:text="@string/search_button" />
     </LinearLayout>
 
