--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -18,14 +18,14 @@
     android:orientation="vertical">
 
     <TextView
-      android:id="@+id/label"
+      android:id="@+id/title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="15sp"
       android:textStyle="bold"/>
 
     <TextView
-      android:id="@+id/size"
+      android:id="@+id/content"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="15sp"/>
